# pyxslxview

./: README.md  pyproject.toml
pyxslxview/: README.md  __init__.py  pyproject.toml
pyxslxview/core/: __init__.py  alignment.py  border.py  cell.py  color.py  document.py  fill.py  range.py  styles.py  workbook.py  worksheet.py
pyxslxview/graphics/: __init__.py  canvas.py  color.py  font.py  image.py
pyxslxview/layout/: __init__.py  calculator.py  measurer.py  paginator.py
pyxslxview/output/: __init__.py  image_output.py  pdf_output.py  print_output.py
pyxslxview/parser/: __init__.py  formulas.py  shared_strings.py  styles.py  xlsx_parser.py
pyxslxview/renderer/: __init__.py  background_renderer.py  base.py  border_renderer.py  cell_renderer.py  conditional_format_renderer.py  formula_renderer.py  text_renderer.py
pyxslxview/tests/: __init__.py  conftest.py  test_core.py  test_integration.py
pyxslxview/utils/: __init__.py  cache.py  helpers.py  units.py
